--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
   </head>
   <body>
     <header>
-      <h1>Mi costi ma quanto mi costi???</h1>
+      <h1>Mi costi... ma quanto mi costi???</h1>
       <h2>Gli italiani e il loro amore per gli Smartphone</h2>
       <p>
-        La nostra statistica si basa sull'effettivo consumo che viene fatto in base al numero delle telefonate ed al credito disponibile <br />
-        Per questo tipo di controllo sono stati collegati su questa pagina 3 diversi smartphone presi da 3 campioni di utenti, di diverse età e contesti.
+        Statistica sull'effettivo consumo che viene effettuato <br />
+        in base alla fascia d'età, al sesso ed all'occupazione <br />
+        Sono stati collegati su questa pagina <br />
+        3 diversi smartphone presi da 3 campioni di utenti... <br />
+        <br />
+        <strong>Facciamo partire le chiamate...</strong>
       </p>
     </header>
-    <section id="iphone">
-      <div class="smartph"></div>
-    </section>
+    <div id="container"></div>
   </body>
 </html>
