--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         Sono stati collegati su questa pagina <br />
         3 diversi smartphone presi da 3 campioni di utenti... <br />
         <br />
-        <strong>Facciamo partire le chiamate...</strong>
+        <strong>Controlliamo il credito e facciamo partire le chiamate...</strong>
       </p>
     </header>
     <div id="container"></div>
